--- a/passbook-presentation/src/main/resources/application.properties
+++ b/passbook-presentation/src/main/resources/application.properties
@@ -8,14 +8,14 @@ spring.datasource.username=root
 spring.datasource.password=aditya
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 # Spring boot jpa configurations
-#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 #spring.jpa.hibernate.ddl-auto=validate
 
 #spring.datasource.schema=classpath:/data/hsqldb/schema.sql
-spring.datasource.data=classpath:/data/hsqldb/passbook-mysql.sql
+spring.datasource.data=classpath:/data/mysql/passbook-data-mysql.sql
 
 #ThymeLeaf properties
 spring.thymeleaf.prefix=classpath:/public/
