--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,27 @@
 		</dependency>
 
 	</dependencies>
+<build>
+<plugins>
+	<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-source-plugin</artifactId> 
+		<executions> <execution> <id>attach-sources</id> <goals> <goal>jar</goal> 
+		</goals> </execution> </executions> </plugin> <plugin> <artifactId>maven-assembly-plugin</artifactId> 
+		<version>2.6</version> <configuration> <descriptors> <descriptor>assembly/src.xml</descriptor> 
+		</descriptors> </configuration> </plugin> -->
+		 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <verbose>true</verbose>
+                </configuration>
+            </plugin>
+
+</plugins>
+</build>
+
 	<modules>
 		<module>passbook-passkit</module>
 		<module>passbook-data</module>
