--- a/passbook-passkit/pom.xml
+++ b/passbook-passkit/pom.xml
@@ -32,18 +32,30 @@
         </dependency>
 
   </dependencies>
+  
+  	<build>
 
-  <build>
-        <plugins>
-            <plugin>
+		<plugins>
+<!-- 		 <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <verbose>true</verbose>
                 </configuration>
-            </plugin>
-        </plugins>
-    </build>
+            </plugin> -->
+
+	<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-source-plugin</artifactId> 
+		<executions> <execution> <id>attach-sources</id> <goals> <goal>jar</goal> 
+		</goals> </execution> </executions> </plugin> -->
+
+
+		</plugins>
+
+
+
+	</build>
+
 </project>
