--- a/passbook-presentation/src/main/resources/hibernate.properties
+++ b/passbook-presentation/src/main/resources/hibernate.properties
@@ -2,5 +2,6 @@
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #hibernate.format_sql=true
 hibernate.hbm2ddl.auto=create-drop
+#hibernate.jdbc.batch_versioned_data=true
 #hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
