--- a/passbook-passkit/pom.xml
+++ b/passbook-passkit/pom.xml
@@ -1,61 +1,41 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.mds</groupId>
-    <artifactId>passbook</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <groupId>com.mds.passbook.passkit</groupId>
-  <artifactId>passbook-passkit</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>passbook-passkit</name>
-  <url>http://maven.apache.org</url>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.mds</groupId>
+		<artifactId>passbook</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<groupId>com.mds.passbook.passkit</groupId>
+	<artifactId>passbook-passkit</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<name>passbook-passkit</name>
+	<url>http://maven.apache.org</url>
 
-      <properties>
-        <passkit4j.version>2.0.1</passkit4j.version>
-        <junit.version>4.12</junit.version>
-    </properties>
+	<properties>
+		<passkit4j.version>2.0.1</passkit4j.version>
+		<junit.version>4.12</junit.version>
+	</properties>
+	
 
-  <dependencies>
-      <dependency>
-            <groupId>com.ryantenney.passkit4j</groupId>
-            <artifactId>passkit4j</artifactId>
-            <version>${passkit4j.version}</version>
-        </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>com.ryantenney.passkit4j</groupId>
+			<artifactId>passkit4j</artifactId>
+			<version>${passkit4j.version}</version>
+		</dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+		</dependency>
 
-  </dependencies>
-  
-  	<build>
+	</dependencies>
 
-		<plugins>
-<!-- 		 <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <verbose>true</verbose>
-                </configuration>
-            </plugin> -->
+	
 
-	<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-source-plugin</artifactId> 
-		<executions> <execution> <id>attach-sources</id> <goals> <goal>jar</goal> 
-		</goals> </execution> </executions> </plugin> -->
-
-
-		</plugins>
-
-
-
-	</build>
-
+			
 </project>
