--- a/passbook-presentation/src/main/resources/application.properties
+++ b/passbook-presentation/src/main/resources/application.properties
@@ -1,27 +1,30 @@
-logging.level.org.springframework.web=DEBUG
-debug=true
-logging.file=logs/webapi.log
+logging.level.org.springframework.web=${logging.level.org.springframework.web}
+debug=${debug}
+logging.file=${logging.file}
 
 # DB Config
-spring.datasource.url=jdbc:mysql://localhost:3306/passbook
-spring.datasource.username=root
-spring.datasource.password=aditya
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
+spring.datasource.url=${spring.datasource.url}
+spring.datasource.username=${spring.datasource.username}
+spring.datasource.password=${spring.datasource.password}
+spring.datasource.driver-class-name=${spring.datasource.driver-class-name}
+spring.jpa.hibernate.ddl-auto=${spring.jpa.hibernate.ddl-auto}
+spring.jpa.show-sql=${spring.jpa.show-sql}
 
 # Spring boot jpa configurations
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 #spring.jpa.hibernate.ddl-auto=validate
 
-#spring.datasource.schema=classpath:/data/hsqldb/schema.sql
-spring.datasource.data=classpath:/data/mysql/passbook-data-mysql.sql
+#spring.datasource.schema=${spring.datasource.schema}
+spring.datasource.data=${spring.datasource.data}
 
 #ThymeLeaf properties
-spring.thymeleaf.prefix=classpath:/public/
-spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=${spring.thymeleaf.prefix}
+spring.thymeleaf.cache=${spring.thymeleaf.cache}
 
 #Facebook app details
 
-facebook.appId=720282281443001
-facebook.secretKey=4d31714950b657baad89b26a1dab0a99
+facebook.appId=${facebook.appId}
+facebook.secretKey=${facebook.secretKey}
+
+#passbook details
+PASS.PASS_TYPE_IDENTIFIER=${PASS.PASS_TYPE_IDENTIFIER}
