--- a/passbook-presentation/src/main/resources/hibernate.properties
+++ b/passbook-presentation/src/main/resources/hibernate.properties
@@ -1,7 +1,6 @@
 #Hibernate Configuration
-hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#hibernate.format_sql=true
-hibernate.hbm2ddl.auto=create-drop
-#hibernate.jdbc.batch_versioned_data=true
-#hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-hibernate.show_sql=false
+hibernate.dialect=${hibernate.dialect}
+hibernate.format_sql=${hibernate.format_sql}
+hibernate.hbm2ddl.auto=${hibernate.hbm2ddl.auto}
+#hibernate.ejb.naming_strategy=${hibernate.ejb.naming_strategy}
+hibernate.show_sql=${hibernate.show_sql}
