--- a/pom.xml
+++ b/pom.xml
@@ -133,26 +133,69 @@
 		</dependency>
 
 	</dependencies>
-<build>
-<plugins>
-	<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-source-plugin</artifactId> 
-		<executions> <execution> <id>attach-sources</id> <goals> <goal>jar</goal> 
-		</goals> </execution> </executions> </plugin> <plugin> <artifactId>maven-assembly-plugin</artifactId> 
-		<version>2.6</version> <configuration> <descriptors> <descriptor>assembly/src.xml</descriptor> 
-		</descriptors> </configuration> </plugin> -->
-		 <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <verbose>true</verbose>
-                </configuration>
-            </plugin>
 
-</plugins>
-</build>
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+
+			<properties>
+				<build.profile.id>dev</build.profile.id>
+			</properties>
+
+
+		</profile>
+	</profiles>
+
+
+
+	<build>
+		<plugins>
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-source-plugin</artifactId> 
+				<executions> <execution> <id>attach-sources</id> <goals> <goal>jar</goal> 
+				</goals> </execution> </executions> </plugin> <plugin> <artifactId>maven-assembly-plugin</artifactId> 
+				<version>2.6</version> <configuration> <descriptors> <descriptor>assembly/src.xml</descriptor> 
+				</descriptors> </configuration> </plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<verbose>true</verbose>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+
+		</plugins>
+
+		<filters>
+			<filter>../profiles/${build.profile.id}/config.properties</filter>
+		</filters>
+
+		<resources>
+			<resource>
+				<filtering>true</filtering>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+
+		<!-- <resources> <resource> <filtering>true</filtering> <directory>/passbook-presentation/src/main/resources</directory> 
+			</resource> <resource> <filtering>true</filtering> <directory>/passbook-passkit/src/main/resources</directory> 
+			</resource> <resource> <directory>/passbook-data/src/main/resources</directory> 
+			</resource> <resource> <directory>/passbook-security/src/main/resources</directory> 
+			</resource> </resources> -->
+	</build>
 
 	<modules>
 		<module>passbook-passkit</module>
@@ -160,4 +203,5 @@
 		<module>passbook-presentation</module>
 		<module>passbook-security</module>
 	</modules>
+
 </project>
