--- a/profiles/dev/config.properties
+++ b/profiles/dev/config.properties
@@ -9,9 +9,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/passbook
 spring.datasource.username=root
 spring.datasource.password=aditya
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.datasource.data=classpath:/data/mysql/passbook-data-mysql.sql.backup
+spring.datasource.data=classpath:/data/mysql/passbook-data-mysql.sql
 #spring.datasource.schema=classpath:/data/hsqldb/schema.sql
 
 #ThymeLeaf properties
@@ -28,7 +28,7 @@ PASS.PASS_TYPE_IDENTIFIER=pass.com.mds.passbookapp
 
 
 ## Hibernate properties ##
-hibernate.hbm2ddl.auto=validate
+hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.format_sql=true
 #hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
