--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,14 @@
 
 	<build>
 		<plugins>
+			 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-eclipse-plugin</artifactId>
+                <configuration>
+                    <downloadSources>true</downloadSources>
+                    <!-- <downloadJavadocs>true</downloadJavadocs> -->
+                </configuration>
+            </plugin>
 			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-source-plugin</artifactId> 
 				<executions> <execution> <id>attach-sources</id> <goals> <goal>jar</goal> 
 				</goals> </execution> </executions> </plugin> <plugin> <artifactId>maven-assembly-plugin</artifactId> 
