--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,7 @@
                 <artifactId>maven-eclipse-plugin</artifactId>
                 <configuration>
                     <downloadSources>true</downloadSources>
+          			<pde>true</pde>
                     <!-- <downloadJavadocs>true</downloadJavadocs> -->
                 </configuration>
             </plugin>
